# Vera

./: .env.example  .gitignore  AUTOMATIC_INDEX.md  CLAUDE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PROGRESS_SUMMARY.md  README.md  SEARCH_ALTERNATIVES.md  SUMMARY_AUTOMATIC_INDEX.md  TODO.md  WEB_INDEX_BUILD.md  apply_branding.sh  build_web_index.py  check_build_progress.sh  check_index_status.py  chunking_utils.py  config.py  config.py.example  download_hashicorp_pdfs.py  hashicorp_doc_search.py  hashicorp_pdf_search.py  hashicorp_unified_search.py  hashicorp_web_search.py  ivan.py  lint.sh  pyproject.toml  requirements.txt  run_build_index.sh  setup.sh  system_prompt.md  test_parent_child.py  test_selenium_download.py  tools.py  vera.py  web_index_manager.py
branding/: README.md  custom.css
deprecated/: README.md  hashicorp_pdf_search.py  hashicorp_pdf_search_v1_backup.py  validate_semantic_search.py
ivan-extension/: README.md  background.js  content.css  content.js  create_icons.py  manifest.json  popup.css  popup.html  popup.js
notes/: example.md
roadmap/: ANALYSIS_SUMMARY.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_SUMMARY.md  EXPLORATION_NOTES.md  ISSUES.md  SEARCH_ALTERNATIVES.md  TODO.md
tests/: CERTIFICATION_TEST_RESULTS_SUMMARY.md  README.md  benchmark_search.py  certification_questions.json  test_bm25_weights.py  test_certification.py  test_comparison.py  test_consul_stale_reads.py  test_debug_chunks.py  test_hashicorp_search.py  test_parallel_crawler.py  test_pdf_search.py  test_validated_designs.py  test_web_crawler.py
vera-extension/: README.md  background.js  content.css  content.js  create_icons.py  manifest.json  popup.css  popup.html  popup.js
