# Ivan - HashiCorp Documentation Assistant

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivan"
version = "0.1.0"
description = "HashiCorp documentation assistant with semantic search"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ivan Contributors"}
]
keywords = ["hashicorp", "documentation", "assistant", "llm", "chatbot", "semantic-search"]

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.0.13",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "duckduckgo-search>=4.4.3",
    "ollama>=0.6.0",
    "google-genai>=0.2.0",
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.8.0",
    "tiktoken>=0.5.0",
    "rank-bm25>=0.2.2",
    "beautifulsoup4>=4.12.3",
    "llm-api-server @ git+https://github.com/assareh/llm-api-server.git",
]

[project.optional-dependencies]
webui = ["open-webui>=0.1.0"]
dev = ["pytest", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/assareh/ivan"
Repository = "https://github.com/assareh/ivan"
Issues = "https://github.com/assareh/ivan/issues"

[tool.black]
line-length = 120
target-version = ['py312']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.eggs
  | branding
  | deprecated
  | hashicorp_web_docs
  | hashicorp_web_docs_test
  | benchmark_results
)/
'''

[tool.ruff]
# Ruff is a fast Python linter that replaces flake8, isort, pylint, and more
line-length = 120
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "branding",
    "deprecated",
    "hashicorp_web_docs",
    "hashicorp_web_docs_test",
    "benchmark_results",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modernize Python code)
    "B",     # flake8-bugbear (find likely bugs)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "N802",   # Function name should be lowercase
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "SIM108", # Use ternary operator (sometimes less readable)
    "PTH",    # Prefer pathlib - we use os.path which is fine
    "RUF005", # Iterable unpacking style preference
]

[tool.ruff.lint.per-file-ignores]
# Allow print statements in main application files
# Allow imports after code in main file (for user feedback before slow imports)
"ivan.py" = ["T201", "E402"]
"ivan_new.py" = ["T201", "E402"]
"tools.py" = ["T201"]
# Utility scripts - allow print statements and bare except
"check_index_status.py" = ["T201", "E722"]
# Test files - relax many rules
"tests/*.py" = ["T201", "E722", "F841", "RUF001", "RUF002", "RUF003", "RUF015", "SIM102", "C401"]
"test_*.py" = ["T201", "E722", "F841", "RUF001", "RUF002", "RUF003", "RUF015", "SIM102", "C401"]
# Extension scripts - allow bare except
"ivan-extension/*.py" = ["E722"]
# Main search module - allow specific patterns
"hashicorp_doc_search.py" = ["E722", "F841", "SIM113"]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["ivan"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
# MyPy type checking configuration (optional)
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "deprecated/",
]
