# Ivan - HashiCorp Documentation Assistant

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivan"
version = "0.3.0"
description = "HashiCorp documentation assistant with semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Ivan Contributors"}
]
keywords = ["hashicorp", "documentation", "assistant", "llm", "chatbot", "semantic-search"]

dependencies = [
    # llm-api-server provides ServerConfig, RAG module, and builtin tools
    # Use local path for development, git URL for production
    "llm-api-server @ file:///Users/assareh/Developer/llm-api-server",
    # Core Flask server
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    # RAG dependencies
    "langchain>=0.3.0",
    "langchain-community>=0.0.13",
    "langchain-huggingface>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "rank-bm25>=0.2.2",
    "readability-lxml>=0.8.1",
    # Web search
    "duckduckgo-search>=5.0.0",
    # CLI and config
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
webui = ["open-webui"]
dev = ["pytest", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/assareh/ivan"
Repository = "https://github.com/assareh/ivan"
Issues = "https://github.com/assareh/ivan/issues"

[tool.setuptools]
py-modules = ["ivan", "config", "tools"]

[tool.setuptools.packages.find]
exclude = ["branding*", "deprecated*", "hashicorp_web_docs*", "hashicorp_docs_index*", "benchmark_results*", "docs*", "tests*", "roadmap*", "ivan-extension*"]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
  | \.eggs
  | branding
  | deprecated
  | hashicorp_web_docs
  | hashicorp_docs_index
  | benchmark_results
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    "branding",
    "deprecated",
    "hashicorp_web_docs",
    "hashicorp_docs_index",
    "benchmark_results",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by black)
    "B008",   # Function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "N802",   # Function name should be lowercase
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "SIM108", # Use ternary operator
    "RUF005", # Iterable unpacking style preference
]

[tool.ruff.lint.per-file-ignores]
"ivan.py" = ["T201", "E402"]
"tools.py" = ["T201"]
"tests/*.py" = ["T201", "E722", "F841"]
"test_*.py" = ["T201", "E722", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["config", "tools"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["venv/", ".venv/", "build/", "dist/", "deprecated/"]
